--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -1146,6 +1146,11 @@ SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Replication=True
 SphereReflectionCapture.Input=True
+SoundNodeSoundClass.SoundClass=True
+SoundNodeMixer.Mixer=True
+SoundNodeParamCrossFade.CrossFade=True
+SoundNodeBranch.Branch=True
+SoundNodeSwitch.Switch=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1242,7 +1247,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Audio
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2356,32 +2361,32 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/Baseball_Field_Field
-MRUItem1=/Game/VRTemplate/Blueprints/Baseball_Field_Bases
-MRUItem2=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem3=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem4=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem5=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem6=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem7=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem8=/Game/VRTemplate/Blueprints/Launcher
-MRUItem9=/Game/VRTemplate/Widgets/MainMenuWidget
-MRUItem10=/Game/VRTemplate/Blueprints/MainMenu
-MRUItem11=/Game/VRTemplate/Maps/MainMenuMap
-MRUItem12=/Game/VRTemplate/Maps/VRTemplateMap
-MRUItem13=/Game/VRTemplate/Maps/MainMenuLevel
-MRUItem14=/Game/VRTemplate/Maps/MainMenu
-MRUItem15=/Game/VRTemplate/Blueprints/VRPawn
-MRUItem16=/Game/VRTemplate/Blueprints/Projectile
-MRUItem17=/Game/VRTemplate/Blueprints/target
-MRUItem18=/Game/VRTemplate/Blueprints/Timer
-MRUItem19=/Game/VRTemplate/Blueprints/Baseball
+MRUItem0=/Game/VRTemplate/Audio/sound
+MRUItem1=/Game/VRTemplate/Blueprints/Baseball_Field_Field
+MRUItem2=/Game/VRTemplate/Blueprints/Baseball_Field_Bases
+MRUItem3=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem4=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem5=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem6=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem7=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem8=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem9=/Game/VRTemplate/Blueprints/Launcher
+MRUItem10=/Game/VRTemplate/Widgets/MainMenuWidget
+MRUItem11=/Game/VRTemplate/Blueprints/MainMenu
+MRUItem12=/Game/VRTemplate/Maps/MainMenuMap
+MRUItem13=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem14=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem15=/Game/VRTemplate/Maps/MainMenu
+MRUItem16=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem17=/Game/VRTemplate/Blueprints/Projectile
+MRUItem18=/Game/VRTemplate/Blueprints/target
+MRUItem19=/Game/VRTemplate/Blueprints/Timer
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2404,6 +2409,7 @@ NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Audio/sound.sound;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/MainMenu.MainMenu;
 RecentlyPlaced=/Game/VRSpectator/VRSpectator.VRSpectator;
@@ -2423,7 +2429,6 @@ RecentlyPlaced=/Game/Baseball/baseball.baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
-RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2468,6 +2473,7 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/FinalActor.FinalActor=1
 /Game/VRTemplate/Blueprints/Baseball_Field_Bases.Baseball_Field_Bases=1
 /Game/VRTemplate/Blueprints/Baseball_Field_Field.Baseball_Field_Field=1
+/Game/VRTemplate/Audio/sound.sound=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2514,6 +2520,7 @@ CryptoKeysSettings=True
 GeneralProjectSettings=True
 OculusHMDRuntimeSettings=True
 SteamVREditorSettings=True
+GameMapsSettings=True
 
 [/Script/SketchfabGLTF.SKGLTFImportOptions_SKETCHFAB]
 bMergeMeshes=True
@@ -2660,7 +2667,7 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
@@ -2690,4 +2697,82 @@ BrushComponent=
 VRSpectator_C=StaticMeshComponent.Collision.Collision,
 RecastNavMesh=StaticMeshComponent.Collision.Collision,
 NavModifierVolume=StaticMeshComponent.Collision.Collision,
+CryptoKeysSettings=StaticMeshComponent.Collision.Collision,
+GeneralProjectSettings=StaticMeshComponent.Collision.Collision,
+GameplayTagsSettings=StaticMeshComponent.Collision.Collision,
+GameMapsSettings=StaticMeshComponent.Collision.Collision,
+MoviePlayerSettings=StaticMeshComponent.Collision.Collision,
+ProjectPackagingSettings=StaticMeshComponent.Collision.Collision,
+HardwareTargetingSettings=StaticMeshComponent.Collision.Collision,
+AssetManagerSettings=StaticMeshComponent.Collision.Collision,
+AssetToolsSettings=StaticMeshComponent.Collision.Collision,
+AISystem=StaticMeshComponent.Collision.Collision,
+AnimationSettings=StaticMeshComponent.Collision.Collision,
+AudioSettings=StaticMeshComponent.Collision.Collision,
+ChaosSolverSettings=StaticMeshComponent.Collision.Collision,
+CollisionProfile=StaticMeshComponent.Collision.Collision,
+ConsoleSettings=StaticMeshComponent.Collision.Collision,
+CookerSettings=StaticMeshComponent.Collision.Collision,
+CrowdManager=StaticMeshComponent.Collision.Collision,
+DataDrivenConsoleVariableSettings=StaticMeshComponent.Collision.Collision,
+DebugCameraControllerSettings=StaticMeshComponent.Collision.Collision,
+GameplayDebuggerConfig=StaticMeshComponent.Collision.Collision,
+GarbageCollectionSettings=StaticMeshComponent.Collision.Collision,
+Engine=StaticMeshComponent.Collision.Collision,
+HierarchicalLODSettings=StaticMeshComponent.Collision.Collision,
+InputSettings=StaticMeshComponent.Collision.Collision,
+LandscapeSettings=StaticMeshComponent.Collision.Collision,
+LevelSequenceProjectSettings=StaticMeshComponent.Collision.Collision,
+NavigationSystemV1=StaticMeshComponent.Collision.Collision,
+NetworkSettings=StaticMeshComponent.Collision.Collision,
+PhysicsSettings=StaticMeshComponent.Collision.Collision,
+RendererSettings=StaticMeshComponent.Collision.Collision,
+RendererOverrideSettings=StaticMeshComponent.Collision.Collision,
+SlateSettings=StaticMeshComponent.Collision.Collision,
+StreamingSettings=StaticMeshComponent.Collision.Collision,
+TutorialSettings=StaticMeshComponent.Collision.Collision,
+UserInterfaceSettings=StaticMeshComponent.Collision.Collision,
+LevelEditor2DSettings=StaticMeshComponent.Collision.Collision,
+EditorProjectAppearanceSettings=StaticMeshComponent.Collision.Collision,
+BlueprintEditorProjectSettings=StaticMeshComponent.Collision.Collision,
+ClassViewerProjectSettings=StaticMeshComponent.Collision.Collision,
+DDCProjectSettings=StaticMeshComponent.Collision.Collision,
+ProxyLODMeshSimplificationSettings=StaticMeshComponent.Collision.Collision,
+MovieSceneToolsProjectSettings=StaticMeshComponent.Collision.Collision,
+MeshSimplificationSettings=StaticMeshComponent.Collision.Collision,
+PaperImporterSettings=StaticMeshComponent.Collision.Collision,
+SkeletalMeshSimplificationSettings=StaticMeshComponent.Collision.Collision,
+StructViewerProjectSettings=StaticMeshComponent.Collision.Collision,
+TextureImportSettings=StaticMeshComponent.Collision.Collision,
+UMGEditorProjectSettings=StaticMeshComponent.Collision.Collision,
+AndroidRuntimeSettings=StaticMeshComponent.Collision.Collision,
+ShaderPlatformQualitySettings=StaticMeshComponent.Collision.Collision,
+AndroidSDKSettings=StaticMeshComponent.Collision.Collision,
+IOSRuntimeSettings=StaticMeshComponent.Collision.Collision,
+LinuxTargetSettings=StaticMeshComponent.Collision.Collision,
+MacTargetSettings=StaticMeshComponent.Collision.Collision,
+LuminRuntimeSettings=StaticMeshComponent.Collision.Collision,
+MagicLeapSDKSettings=StaticMeshComponent.Collision.Collision,
+WindowsTargetSettings=StaticMeshComponent.Collision.Collision,
+AvfMediaSettings=StaticMeshComponent.Collision.Collision,
+GooglePADRuntimeSettings=StaticMeshComponent.Collision.Collision,
+ImgMediaSettings=StaticMeshComponent.Collision.Collision,
+LevelSequenceEditorSettings=StaticMeshComponent.Collision.Collision,
+LiveLinkSettings=StaticMeshComponent.Collision.Collision,
+LiveLinkComponentSettings=StaticMeshComponent.Collision.Collision,
+LiveLinkSequencerSettings=StaticMeshComponent.Collision.Collision,
+MagicLeapSettings=StaticMeshComponent.Collision.Collision,
+MagicLeapARPinSettings=StaticMeshComponent.Collision.Collision,
+NiagaraSettings=StaticMeshComponent.Collision.Collision,
+NiagaraEditorSettings=StaticMeshComponent.Collision.Collision,
+OculusHMDRuntimeSettings=StaticMeshComponent.Collision.Collision,
+PaperRuntimeSettings=StaticMeshComponent.Collision.Collision,
+PythonScriptPluginSettings=StaticMeshComponent.Collision.Collision,
+ResonanceAudioSettings=StaticMeshComponent.Collision.Collision,
+SteamVREditorSettings=StaticMeshComponent.Collision.Collision,
+TakeRecorderProjectSettings=StaticMeshComponent.Collision.Collision,
+TcpMessagingSettings=StaticMeshComponent.Collision.Collision,
+TemplateSequenceEditorSettings=StaticMeshComponent.Collision.Collision,
+UdpMessagingSettings=StaticMeshComponent.Collision.Collision,
+WmfMediaSettings=StaticMeshComponent.Collision.Collision,
 
